--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,18 +16,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
     
-    - name: Install dependencies
+    - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest mypy
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e .
+        python -m pip install wheel setuptools
+    
+    - name: Install package
+      run: |
+        python -m pip install -e ".[dev]"
+    
+    - name: Install test dependencies
+      run: |
+        python -m pip install pytest pytest-cov flake8 mypy
     
     - name: Lint with flake8
       run: |
