--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -23,12 +23,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
     
-    - name: Install dependencies
+    - name: Install package and dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install wheel setuptools
-        python -m pip install types-requests
-        python -m pip install -e ".[dev]"
+        python -m pip install .[dev]
     
     - name: Lint with flake8
       run: |
