--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    name: Run tests and collect coverage
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -15,7 +16,10 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
@@ -23,20 +27,33 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
     
-    - name: Install package and dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[dev]
+        python -m pip install pytest pytest-cov responses
+    
+    - name: Run tests and collect coverage
+      run: |
+        pytest --cov=siwar tests/ --cov-report=xml --cov-report=term-missing
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.xml
+        fail_ci_if_error: false
+        flags: unittests
+        name: codecov-siwar-api
+        verbose: true
+
+    - name: Type check with mypy
+      run: |
+        mypy src/siwar
     
     - name: Lint with flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
-    
-    - name: Type check with mypy
-      run: |
-        mypy src/siwar
-    
-    - name: Test with pytest
-      run: |
-        pytest
