--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - name: Checkout
@@ -31,24 +31,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[dev]
-        python -m pip install pytest pytest-cov responses
     
     - name: Run tests and collect coverage
-      run: |
-        pytest --cov=siwar tests/ --cov-report=xml --cov-report=term-missing
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
       env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./coverage.xml
-        fail_ci_if_error: false
-        flags: unittests
-        name: codecov-siwar-api
-        verbose: true
-
+        SIWAR_API_KEY: ${{ secrets.SIWAR_API_KEY }}
+      run: |
+        pytest
+    
     - name: Type check with mypy
       run: |
         mypy src/siwar
